--- a/backend-api/src/main/resources/static/dashboard.html
+++ b/backend-api/src/main/resources/static/dashboard.html
@@ -61,11 +61,10 @@
 </head>
 
 <body class="bg-light text-light d-flex flex-column min-vh-100">
-    <!-- Header -->
     <div class="sticky-top container-fluid bg-dark text-light">
         <header class="d-flex justify-content-between align-items-center py-1">
             <a href="../index.html">
-                <img style="width:70px;height:70px" src="../img_test1_white.png" alt="Logo"
+                <img style="width:70px;height:70px" src="images\img_test1_white.png" alt="Logo"
                     class="img-fluid" />
             </a>
             <form class="col-md-4 d-flex" role="search" onsubmit="event.preventDefault()">
@@ -86,14 +85,11 @@
         </header>
     </div>
 
-    <!-- Main -->
     <main class="container py-4 text-dark">
-        <!-- Avatar -->
         <div class="d-flex justify-content-center mb-3">
             <img class="avatar" src="../images/img_test.png" alt="Profile Avatar" />
         </div>
 
-        <!-- KPI row -->
         <section class="kpi mb-3">
             <div class="row g-3">
                 <div class="col-md-4">
@@ -132,221 +128,143 @@
             </div>
         </section>
 
-        <!-- Tabs -->
-        <ul class="nav nav-pills justify-content-center my-3" id="dashTabs" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="overview-tab" data-bs-toggle="pill" data-bs-target="#overview"
-                    type="button" role="tab">Overview</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="listings-tab" data-bs-toggle="pill" data-bs-target="#listings"
-                    type="button" role="tab">Manage Listings</button>
-            </li>
-        </ul>
+        <div class="d-flex justify-content-between align-items-center mt-3 mb-2">
+            <h2 class="h6 mb-0">All Listings</h2>
+            <a class="btn btn-success" href="new_listings.html">Create Listing</a>
+        </div>
 
-        <div class="tab-content">
-
-            <!-- OVERVIEW -->
-            <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview-tab">
-                <h2 class="h6 mb-2">Recent Listings</h2>
-                <div class="table-responsive bg-white rounded shadow-sm">
-                    <table class="table mb-0">
-                        <thead class="table-light">
-                            <tr>
-                                <th>Title</th>
-                                <th>Price</th>
-                                <th>Views</th>
-                                <th>Status</th>
-                                <th>Date Posted</th>
-                                <th class="text-end actions-col">Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Gaming Laptop</td>
-                                <td>$1200</td>
-                                <td>231</td>
-                                <td><span class="badge text-bg-success status-badge">Active</span></td>
-                                <td>Sep 1, 2025</td>
-                                <td class="text-end actions-col">
-                                    <div class="d-inline-flex gap-2">
-                                        <a class="btn btn-outline-primary btn-sm" href="new_listings.html?id=1">Edit</a>
-                                        <button class="btn btn-outline-danger btn-sm"
-                                            onclick="this.closest('tr').remove()">Delete</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Mountain Bike</td>
-                                <td>$450</td>
-                                <td>145</td>
-                                <td><span class="badge text-bg-success status-badge">Active</span></td>
-                                <td>Aug 28, 2025</td>
-                                <td class="text-end actions-col">
-                                    <div class="d-inline-flex gap-2">
-                                        <a class="btn btn-outline-primary btn-sm" href="new_listings.html?id=2">Edit</a>
-                                        <button class="btn btn-outline-danger btn-sm"
-                                            onclick="this.closest('tr').remove()">Delete</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Dining Table Set</td>
-                                <td>$300</td>
-                                <td>112</td>
-                                <td><span class="badge text-bg-secondary status-badge">Sold</span></td>
-                                <td>Aug 15, 2025</td>
-                                <td class="text-end actions-col">
-                                    <div class="d-inline-flex gap-2">
-                                        <a class="btn btn-outline-primary btn-sm disabled" href="#"
-                                            aria-disabled="true">Edit</a>
-                                        <button class="btn btn-outline-danger btn-sm"
-                                            onclick="this.closest('tr').remove()">Delete</button>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-            <!-- MANAGE LISTINGS -->
-            <div class="tab-pane fade" id="listings" role="tabpanel" aria-labelledby="listings-tab">
-                <div class="d-flex justify-content-between align-items-center mt-3 mb-2">
-                    <h2 class="h6 mb-0">All Listings</h2>
-                    <a class="btn btn-success" href="new_listings.html">Create Listing</a>
-                </div>
-
-                <div class="table-responsive bg-white rounded shadow-sm">
-                    <table class="table mb-0">
-                        <thead class="table-light">
-                            <tr>
-                                <th>Item</th>
-                                <th>Image</th>
-                                <th>Category</th>
-                                <th>Price</th>
-                                <th>Views</th>
-                                <th>Status</th>
-                                <th>Date Posted</th>
-                                <th class="text-end actions-col">Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Row 1 (Active -> Hide available) -->
-                            <tr>
-                                <td>Gaming Laptop</td>
-                                <td><img class="thumb" alt="Gaming Laptop"
-                                        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Frobots.net%2Fwp-content%2Fuploads%2F2023%2F12%2Fwhat-is-a-gaming-laptop-1701754858.jpg&f=1&nofb=1&ipt=bf612b3e6a479450a016a808ad548853bdfe89accbd6aa294c12e2e93f9f5af2">
-                                </td>
-                                <td>Electronics</td>
-                                <td>$1200</td>
-                                <td>231</td>
-                                <td><span class="badge text-bg-success status-badge">Active</span></td>
-                                <td>Sep 1, 2025</td>
-                                <td class="text-end actions-col">
-                                    <div class="d-inline-flex gap-2 text-nowrap">
-                                        <a class="btn btn-outline-primary btn-sm" href="new_listings.html?id=1">Edit</a>
-                                        <button class="btn btn-outline-warning btn-sm toggle-visibility"
-                                            data-initial="active">Hide</button>
-                                        <button class="btn btn-outline-danger btn-sm"
-                                            onclick="this.closest('tr').remove()">Delete</button>
-                                    </div>
-                                </td>
-                            </tr>
-
-                            <!-- Row 2 (Active -> Hide available) -->
-                            <tr>
-                                <td>Mountain Bike</td>
-                                <td><img class="thumb" alt="Mountain Bike"
-                                        src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.singletracks.com%2Fblog%2Fwp-content%2Fuploads%2F2016%2F09%2FIMG_1720.jpg&f=1&nofb=1&ipt=bb7c589b802ce321db4adc993ee1acf8adde0566e9c853f2e433fa5ee2e64009">
-                                </td>
-                                <td>Vehicles</td>
-                                <td>$450</td>
-                                <td>145</td>
-                                <td><span class="badge text-bg-success status-badge">Active</span></td>
-                                <td>Aug 28, 2025</td>
-                                <td class="text-end actions-col">
-                                    <div class="d-inline-flex gap-2 text-nowrap">
-                                        <a class="btn btn-outline-primary btn-sm" href="new_listings.html?id=2">Edit</a>
-                                        <button class="btn btn-outline-warning btn-sm toggle-visibility"
-                                            data-initial="active">Hide</button>
-                                        <button class="btn btn-outline-danger btn-sm"
-                                            onclick="this.closest('tr').remove()">Delete</button>
-                                    </div>
-                                </td>
-                            </tr>
-
-                            <!-- Row 3 (Sold/Hidden -> Show available) -->
-                            <tr>
-                                <td>Dining Table Set</td>
-                                <td><img class="thumb" alt="Dining Table"
-                                        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fouchcart.com%2Fcdn%2Fshop%2Fproducts%2FNadine_6_-_Person_Counter_Height_Dining_Set.jpg%3Fv%3D1637225879%26width%3D800&f=1&nofb=1&ipt=fa91f4aad01a61707c0a6cde405c1b1fc76275c53e37f7718f0e5228f5070bb3">
-                                </td>
-                                <td>Furniture</td>
-                                <td>$300</td>
-                                <td>112</td>
-                                <td><span class="badge text-bg-secondary status-badge">Sold</span></td>
-                                <td>Aug 15, 2025</td>
-                                <td class="text-end actions-col">
-                                    <div class="d-inline-flex gap-2 text-nowrap">
-                                        <a class="btn btn-outline-primary btn-sm disabled" href="#"
-                                            aria-disabled="true">Edit</a>
-                                        <!-- Starts as SHOW because it's Sold/Hidden -->
-                                        <button class="btn btn-outline-success btn-sm toggle-visibility"
-                                            data-initial="hidden">Show</button>
-                                        <button class="btn btn-outline-danger btn-sm"
-                                            onclick="this.closest('tr').remove()">Delete</button>
-                                    </div>
-                                </td>
-                            </tr>
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+        <div class="table-responsive bg-white rounded shadow-sm">
+            <table class="table mb-0" id="listingsTable">
+                <thead class="table-light">
+                    <tr>
+                        <th>Item</th>
+                        <th>Image</th>
+                        <th>Category</th>
+                        <th>Price</th>
+                        <th>Views</th>
+                        <th>Status</th>
+                        <th>Date Posted</th>
+                        <th class="text-end actions-col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="listingsTableBody">
+                    <tr>
+                        <td colspan="8" class="text-center p-4">Loading your listings...</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 mt-4">
         <p class="mb-0">&copy; 2025 Craig List App</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Auto-open Manage tab if URL ends with #manage
-        (function () {
-            if (location.hash.toLowerCase() === '#manage') {
-                const trigger = document.querySelector('#listings-tab');
-                if (trigger) new bootstrap.Tab(trigger).show();
+        // Helper to get cookie by name
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return parts.pop().split(';').shift();
+            return null;
+        }
+
+        const userId = getCookie("user_id");
+        const tableBody = document.getElementById("listingsTableBody");
+        const API_BASE = "http://localhost:8080/api"; 
+
+        // Load Listings Function
+        async function loadListings() {
+            if (!userId) {
+                tableBody.innerHTML = `<tr><td colspan="8" class="text-center text-danger">Please <a href="../index.html">login</a> to view listings.</td></tr>`;
+                return;
             }
-        })();
 
-        // Prototype: Hide/Show toggle (updates badge + button label)
-        document.querySelectorAll('.toggle-visibility').forEach(btn => {
-            btn.addEventListener('click', function () {
-                const row = this.closest('tr');
-                const badge = row.querySelector('.status-badge');
-                const isHiding = this.textContent.trim().toLowerCase() === 'hide';
-
-                if (isHiding) {
-                    // Active -> Hidden
-                    badge.className = 'badge text-bg-warning status-badge';
-                    badge.textContent = 'Hidden';
-                    this.classList.remove('btn-outline-warning');
-                    this.classList.add('btn-outline-success');
-                    this.textContent = 'Show';
-                } else {
-                    // Hidden/Sold -> Active
-                    badge.className = 'badge text-bg-success status-badge';
-                    badge.textContent = 'Active';
-                    this.classList.remove('btn-outline-success');
-                    this.classList.add('btn-outline-warning');
-                    this.textContent = 'Hide';
+            try {
+                // Fetch listings by User ID
+                const response = await fetch(`${API_BASE}/listings/user/${userId}`);
+                if (response.status === 404 || response.status === 500) {
+                    alert("Session expired, please login again.");
+                    document.cookie = "user_id=; path=/; max-age=0"; // Delete cookie
+                    window.location.href = "../index.html"; // Redirect to login
+                    return;
                 }
+
+                if (!response.ok) throw new Error("Failed to fetch listings");
+
+                const listings = await response.json();
+                renderListings(listings);
+
+            } catch (error) {
+                console.error("Error:", error);
+                tableBody.innerHTML = `<tr><td colspan="8" class="text-center text-danger">Error loading listings. Contact Support!</td></tr>`;
+            }
+        }
+
+        // Render Listings in Table
+        function renderListings(listings) {
+            tableBody.innerHTML = ""; // Clear loading state
+
+            if (listings.length === 0) {
+                tableBody.innerHTML = `<tr><td colspan="8" class="text-center">No listings found. Create one!</td></tr>`;
+                return;
+            }
+
+            listings.forEach(listing => {
+                // Determine the main product; Backend structure: Listing -> has many Products
+                const product = (listing.products && listing.products.length > 0) ? listing.products[0] : null;
+
+                if (!product) return; // Skip empty listings
+
+                const row = document.createElement("tr");
+                const datePosted = new Date(listing.dateCreated).toLocaleDateString();
+                const badgeClass = listing.active ? 'text-bg-success' : 'text-bg-secondary';
+                const statusText = listing.active ? 'Active' : 'Hidden';
+
+                // Placeholder image if string is empty or invalid
+                const imgSrc = product.imageURLString || "https://via.placeholder.com/100?text=No+Image";
+
+                row.innerHTML = `
+                    <td>${product.title}</td>
+                    <td><img class="thumb" alt="${product.title}" src="${imgSrc}" onerror="this.src='https://via.placeholder.com/100?text=Error'"></td>
+                    <td>${listing.category}</td>
+                    <td>$${product.price}</td>
+                    <td>0</td> <td><span class="badge ${badgeClass} status-badge">${statusText}</span></td>
+                    <td>${datePosted}</td>
+                    <td class="text-end actions-col">
+                        <div class="d-inline-flex gap-2 text-nowrap">
+                            <a class="btn btn-outline-primary btn-sm" href="new_listings.html?id=${listing.id}">Edit</a>
+                            <button class="btn btn-outline-danger btn-sm" onclick="handleDelete(${listing.id})">Delete</button>
+                        </div>
+                    </td>
+                `;
+                tableBody.appendChild(row);
             });
-        });
+        }
+
+        // Delete Listing Handler
+        async function handleDelete(id) {
+            if (!confirm("Are you sure you want to delete this listing?")) return;
+
+            try {
+                const response = await fetch(`${API_BASE}/listings/${id}`, {
+                    method: 'DELETE'
+                });
+
+                if (response.ok) {
+                    loadListings(); // Refresh table
+                } else {
+                    alert("Failed to delete. Please try again.");
+                }
+            } catch (error) {
+                console.error(error);
+                alert("Error connecting to server.");
+            }
+        }
+
+        // Initial Load
+        loadListings();
     </script>
 </body>
-
 </html>
