--- a/backend-api/src/main/resources/static/new_listings.html
+++ b/backend-api/src/main/resources/static/new_listings.html
@@ -14,7 +14,6 @@
             flex-direction: column;
             min-height: 100vh;
         }
-
         main {
             flex-grow: 1;
         }
@@ -23,12 +22,10 @@
 
 <body class="bg-light text-dark d-flex flex-column min-vh-100">
 
-    <!-- Navbar (provider) -->
     <div class="sticky-top container-fluid bg-dark text-light">
         <header class="d-flex justify-content-between align-items-center py-1">
             <a href="../index.html">
-                <img style="width:70px;height:70px" src="../images/img_test1_white.png" alt="Logo"
-                    class="img-fluid" />
+                <img style="width:70px;height:70px" src="images/img_test1_white.png" alt="Logo" class="img-fluid"/>
             </a>
             <form class="col-md-4 d-flex" role="search" onsubmit="event.preventDefault()">
                 <input class="form-control rounded-pill me-2" type="search" placeholder="Search" />
@@ -47,7 +44,6 @@
         </header>
     </div>
 
-    <!-- Main -->
     <main class="container py-4">
         <h1 id="pageTitle" class="h4 mb-3">Create a New Listing</h1>
         <div id="editingBadge" class="badge text-bg-secondary mb-3 d-none"></div>
@@ -56,19 +52,19 @@
             <div class="row g-3">
                 <div class="col-md-8">
                     <label class="form-label">Title</label>
-                    <input id="title" class="form-control" placeholder="e.g., 2020 MacBook Pro" />
+                    <input id="title" class="form-control" placeholder="e.g., 2020 MacBook Pro" required />
                 </div>
                 <div class="col-md-4">
                     <label class="form-label">Price</label>
                     <div class="input-group">
                         <span class="input-group-text">$</span>
-                        <input id="price" type="number" min="0" step="1" class="form-control" value="1200" />
+                        <input id="price" type="number" min="0" step="0.01" class="form-control" value="0" required />
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <label class="form-label">Category</label>
-                    <select id="category" class="form-select">
+                    <select id="category" class="form-select" required>
                         <option value="" disabled selected>Choose…</option>
                         <option>Electronics</option>
                         <option>Vehicles</option>
@@ -92,9 +88,9 @@
                 </div>
 
                 <div class="col-12">
-                    <label class="form-label">Images</label>
-                    <input id="images" type="file" class="form-control" multiple />
-                    <div class="form-text">Image upload is simulated in this prototype.</div>
+                    <label class="form-label">Images <span class="text-danger">*</span></label>
+                    <input id="images" type="file" class="form-control" accept="image/*" />
+                    <div class="form-text">An image is required for new listings.</div>
                 </div>
             </div>
 
@@ -105,77 +101,178 @@
         </form>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 mt-4">
         <p class="mb-0">&copy; 2025 Craig List App</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // --- Mock data to prefill on edit ---
-        const MOCK_LISTINGS = {
-            1: {
-                title: "Gaming Laptop",
-                price: 1200,
-                category: "Electronics",
-                email: "seller@example.com",
-                description: "High-performance gaming laptop with the latest specs."
-            },
-            2: {
-                title: "Mountain Bike",
-                price: 450,
-                category: "Vehicles",
-                email: "seller@example.com",
-                description: "A sturdy mountain bike suitable for all terrains. Recently serviced."
-            },
-            3: {
-                title: "Dining Table Set",
-                price: 300,
-                category: "Furniture",
-                email: "seller@example.com",
-                description: "Elegant dining table set with 6 chairs."
-            }
-        };
+        // Helper to get cookie by name
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return parts.pop().split(';').shift();
+            return null;
+        }
 
+        const API_BASE = "http://localhost:8080/api";
         const qs = new URLSearchParams(window.location.search);
-        const editId = qs.get("id"); // if present → edit mode
+        const editId = qs.get("id"); // Listing ID
+        const userId = getCookie("user_id");
+        let currentProductId = null;
 
-        function prefillIfEditing() {
-            if (!editId) return; // new mode
+        // Prefill Form if Editing
+        async function prefillIfEditing() {
+            if (!editId) return;
 
-            const data = MOCK_LISTINGS[editId];
-            if (!data) return;
+            if (!userId) {
+                alert("Please login first");
+                window.location.href = "../index.html";
+                return;
+            }
 
-            // Switch UI to "Edit" mode
             document.title = "Craig List — Edit Listing";
             document.getElementById("pageTitle").textContent = "Edit Listing";
             document.getElementById("submitBtn").textContent = "Update Listing";
-
             const badge = document.getElementById("editingBadge");
-            badge.textContent = `Editing: ${data.title}`;
+            badge.textContent = `Editing Listing #${editId}`;
             badge.classList.remove("d-none");
 
-            // Prefill fields
-            document.getElementById("title").value = data.title;
-            document.getElementById("price").value = data.price;
-            document.getElementById("category").value = data.category;
-            document.getElementById("email").value = data.email;
-            document.getElementById("description").value = data.description;
-        }
+            try {
+                const response = await fetch(`${API_BASE}/listings/${editId}`);
+                if (!response.ok) throw new Error("Listing not found");
 
-        function handleSave() {
-            if (editId) {
-                alert("Listing updated (prototype). Returning to Manage Listings.");
-            } else {
-                alert("Listing created (prototype). Returning to Manage Listings.");
+                const listing = await response.json();
+                document.getElementById("category").value = listing.category;
+
+                if (listing.products && listing.products.length > 0) {
+                    const product = listing.products[0];
+                    currentProductId = product.id; 
+                    document.getElementById("title").value = product.title;
+                    document.getElementById("price").value = product.price;
+                    document.getElementById("description").value = product.description;
+                }
+            } catch (error) {
+                console.error(error);
+                alert("Error fetching listing data.");
             }
-            // Go back to Manage tab in the dashboard
-            window.location.href = "dashboard.html#manage";
         }
 
-        // Init
+        // Convert File to Base64, only used if editing and uploading new image via PUT
+        const toBase64 = file => new Promise((resolve, reject) => {
+            const reader = new FileReader();
+            reader.readAsDataURL(file);
+            reader.onload = () => resolve(reader.result);
+            reader.onerror = error => reject(error);
+        });
+
+        // Save Handler
+        async function handleSave() {
+            if (!userId) {
+                alert("User session not found. Please login.");
+                return;
+            }
+
+            const title = document.getElementById("title").value;
+            const price = document.getElementById("price").value;
+            const category = document.getElementById("category").value;
+            const description = document.getElementById("description").value;
+            const fileInput = document.getElementById("images");
+            if (!editId && fileInput.files.length === 0) {
+                alert("Image is required! Please select a file.");
+                return;
+            }
+
+            try {
+                const listingPayload = {
+                    category: category,
+                    user: { id: userId },
+                    isActive: true
+                };
+
+                let listingId = editId;
+
+                // Create Product Logic
+                if (!editId) {
+                    // Create Listing Container
+                    const listResp = await fetch(`${API_BASE}/listings`, {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify(listingPayload)
+                    });
+                    if (!listResp.ok) throw new Error("Failed to create listing container");
+                    const savedListing = await listResp.json();
+                    listingId = savedListing.id;
+
+                    // Create Product (Multipart)
+                    const productData = {
+                        title: title,
+                        price: price,
+                        description: description,
+                        condition: "Good",
+                        listing: { id: listingId },
+                        user: { id: userId },
+                        isActive: true,
+                        imageURLString: "pending_upload" // Placeholder
+                    };
+
+                    const formData = new FormData();
+                    formData.append("product", new Blob([JSON.stringify(productData)], { type: "application/json" }));
+                    formData.append("file", fileInput.files[0]); 
+
+                    const prodResp = await fetch(`${API_BASE}/products`, {
+                        method: "POST",
+                        body: formData 
+                    });
+                    
+                    if (!prodResp.ok) {
+                        const errorMsg = await prodResp.text(); // Get real error from backend
+                        throw new Error(errorMsg || "Server Error");
+                    }
+                    alert("Listing Created Successfully!");
+
+                } else {
+                    // Update Listing and Product
+                    await fetch(`${API_BASE}/listings/${editId}`, {
+                        method: "PUT",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify(listingPayload)
+                    });
+
+                    if (currentProductId) {
+                         const productPayload = {
+                            title: title,
+                            price: price,
+                            description: description,
+                            condition: "Good",
+                            listing: { id: editId },
+                            user: { id: userId },
+                            isActive: true
+                        };
+                        
+                        // If new image selected during edit, manual base64 conversion for JSON PUT
+                        if (fileInput.files.length > 0) {
+                             productPayload.imageURLString = await toBase64(fileInput.files[0]);
+                        }
+
+                        await fetch(`${API_BASE}/products/${currentProductId}`, {
+                            method: "PUT",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify(productPayload)
+                        });
+                    }
+                    alert("Listing Updated Successfully!");
+                }
+
+                window.location.href = "dashboard.html#manage";
+
+            } catch (error) {
+                console.error("Save failed:", error);
+                alert("Error saving listing: " + error.message);
+            }
+        }
         prefillIfEditing();
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
