--- a/backend-api/src/main/resources/static/listing_view.html
+++ b/backend-api/src/main/resources/static/listing_view.html
@@ -43,6 +43,13 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        // Helper to get cookie by name
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return parts.pop().split(';').shift();
+            return null;
+        }
 
         // Get listing ID from URL
         const urlParams = new URLSearchParams(window.location.search);
@@ -59,6 +66,7 @@
                 alert("Listing not found. Redirecting to home page.");
                 window.location.href = "index.html";
             });
+
         function renderProduct(product) {
             const listingContainer = document.getElementById('listing-content');
             listingContainer.style.paddingTop = '20px';
@@ -135,7 +143,7 @@
                     starRatingDiv.appendChild(ratingText);
                 })
                 .catch(err => console.error("Error loading rating:", err));
-                
+
             sellerTextDiv.appendChild(starRatingDiv);
             sellerInfoDiv.appendChild(sellerImg);
             sellerInfoDiv.appendChild(sellerTextDiv);
@@ -162,9 +170,50 @@
             const contactSellerButton = document.createElement('button');
             contactSellerButton.className = 'btn btn-primary btn-lg';
             contactSellerButton.textContent = 'Contact Seller';
-            contactSellerButton.onclick = () => {
-                window.location.href = `messages.html?thread=john`; // Placeholder for thread ID
-                //window.location.href = `contact_seller.html?id=${product.user.id}`;
+            contactSellerButton.onclick = async () => {
+                // Check if user is logged in
+                const currentUserId = parseInt(getCookie('user_id'));
+                if (!currentUserId) {
+                    alert('Please login to contact the seller');
+                    window.location.href = 'login.html';
+                    return;
+                }
+
+                // Check if user is trying to contact themselves
+                if (currentUserId === product.user.id) {
+                    alert('You cannot message yourself!');
+                    return;
+                }
+
+                // Create or get existing message thread
+                try {
+                    const messageData = {
+                        product: { id: product.id },
+                        buyerId: currentUserId,
+                        sellerId: product.user.id,
+                        buyerText: `Hi, I'm interested in your ${product.title}`,
+                        sellerText: null
+                    };
+
+                    const response = await fetch('http://localhost:8080/api/messages/thread', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(messageData)
+                    });
+
+                    if (response.ok) {
+                        const thread = await response.json();
+                        // Redirect to messages page
+                        window.location.href = 'messages.html';
+                    } else {
+                        throw new Error('Failed to create message thread');
+                    }
+                } catch (error) {
+                    console.error('Error creating message thread:', error);
+                    alert('Failed to create conversation. Please try again.');
+                }
             };
 
             actionButtonsDiv.appendChild(contactSellerButton);
