--- a/backend-api/src/main/resources/static/user_profile.html
+++ b/backend-api/src/main/resources/static/user_profile.html
@@ -127,7 +127,7 @@
             userProfileContainer.innerHTML = `
                 <div class="bg-white border rounded p-4 mb-4 d-flex align-items-center">
                     <img class="img-fluid border rounded me-3" style="width: 100px; height: 100px;" 
-                         src="${user.avatarUrl || 'images/img_test1_white.png'}" alt="User Avatar">
+                         src="${user.profilePictureUrl || 'images/img_test1_white.png'}" alt="User Avatar">
                     <div>
                         <h5 class="mb-1">${displayName} 
                             <span class="text-warning">(${stats.average} <i class="bi bi-star-fill"></i>)</span>
