working on image pfp

--- a/backend-api/src/main/resources/static/index.html
+++ b/backend-api/src/main/resources/static/index.html
@@ -171,6 +171,13 @@
             const profileIconLink = document.createElement('a');
             profileIconLink.href = 'dashboard.html';
             profileIconLink.className = 'text-light text-decoration-none me-3';
+            // const profileIconImg = document.createElement('img');
+            // profileIconImg.src = 'images/img_test1_white.png';
+            // profileIconImg.alt = 'Profile Icon';
+            // profileIconImg.style.width = '30px';
+            // profileIconImg.style.height = '30px';
+            // profileIconImg.className = 'rounded-circle';1
+            // profileIconLink.appendChild(profileIconImg);
             const profileIcon = document.createElement('i');
             profileIcon.className = 'bi bi-person-circle';
             profileIcon.style.fontSize = '30px';
